changed height on mobile screens from height 100vh to min-height webkit fill avail to test fix

--- a/frontend/src/Style/App.css
+++ b/frontend/src/Style/App.css
@@ -484,6 +484,12 @@ table {
 
 /* MOBILE SCREENS */
 @media only screen and (max-width: 600px) {
+
+  .main-container {
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+  }
+
   .navbar {
     display: none;
   }
